[package]
name = "order-book"
version = "0.0.0"
publish = false
edition = "2021"
authors = ["you"]

[lib]
path = "src/lib.rs"

[dependencies.multiversx-sc]
version = "=0.53.0"

[dependencies.multiversx-sc-modules]
version = "=0.53.0"

[dependencies.auto-farm]
path = "../auto-farm"

[dependencies.router]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "571dc9d"

[dependencies.utils]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "571dc9d"

[dev-dependencies]
num-bigint = "0.4"

[dev-dependencies.multiversx-sc-scenario]
version = "=0.53.0"
