[package]
name = "tests-common"
version = "0.0.0"
authors = ["you"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[features]
enable-tests-common = []

[dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"
hex-literal = "0.3.4"

[dependencies.multiversx-sc]
version = "0.53.2"
features = ["esdt-token-payment-legacy-decode"]

[dependencies.multiversx-sc-modules]
version = "0.53.2"

[dependencies.multiversx-sc-scenario]
version = "0.53.2"

[dependencies.farm]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "f2a9080"

[dependencies.farm-with-locked-rewards]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "f2a9080"

[dependencies.farm-staking]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "f2a9080"

[dependencies.farm-staking-proxy]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "f2a9080"

[dependencies.pair]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "f2a9080"

[dependencies.energy-factory]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "f2a9080"

[dependencies.common_structs]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "f2a9080"

[dependencies.mergeable]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "f2a9080"

[dependencies.utils]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "f2a9080"

[dependencies.energy-query]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "f2a9080"

[dependencies.legacy_token_decode_module]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "f2a9080"

[dependencies.lkmex-transfer]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "f2a9080"

[dependencies.simple-lock]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "f2a9080"

[dependencies.farm-boosted-yields]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "f2a9080"

[dependencies.config]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "f2a9080"

[dependencies.locking_module]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "f2a9080"

[dependencies.farm_token]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "f2a9080"

[dependencies.pausable]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "f2a9080"

[dependencies.sc_whitelist_module]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "f2a9080"
