[package]
name = "token-exposure-voting"
version = "0.0.0"
authors = ["you"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.multiversx-sc]
version = "=0.53.0"
features = ["esdt-token-payment-legacy-decode"]

[dependencies.multiversx-sc-modules]
version = "=0.53.0"

[dev-dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"
hex-literal = "0.3.4"

[dev-dependencies.multiversx-sc-scenario]
version = "=0.53.0"

[dependencies.energy-query]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "571dc9d"

[dependencies.week-timekeeping]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "571dc9d"

[dev-dependencies.energy-factory]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "571dc9d"

[dev-dependencies.simple-lock]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "571dc9d"

