[package]
name = "token-voting-energy"
version = "0.0.0"
edition = "2021"
publish = false
authors = ["you"]

[lib]
path = "src/token_voting_energy.rs"

[dependencies.multiversx-sc]
version = "0.53.0"

[dev-dependencies]
num-bigint = "0.4"

[dev-dependencies.multiversx-sc-scenario]
version = "0.53.0"
