[[bin]]
name = "rust-interact"
path = "src/lib.rs"

[package]
name = "rust-interact"
version = "0.0.0"
authors = ["you"]
edition = "2021"
publish = false
[dependencies.auto-farm]
path = ".."

[dependencies.multiversx-sc-snippets]
version = "0.39.4"

[dependencies.energy-query]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "fdb1fb4"
