[[bin]]
name = "rust-interact"
path = "src/interact.rs"

[package]
name = "rust-interact"
version = "0.0.0"
authors = ["you"]
edition = "2021"
publish = false
[dependencies.auto-farm]
path = ".."

[dependencies.multiversx-sc-snippets]
version = "0.43.2"

[dependencies.energy-query]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "7f25a72"
