[[bin]]
name = "auto-pos-creator-interact"
path = "src/auto_pos_creator_interact.rs"

[package]
name = "auto-pos-creator-interact"
version = "0.0.0"
authors = ["you"]
edition = "2021"
publish = false

[dependencies]
toml = "0.8.6"

[dependencies.auto-pos-creator]
path = ".."

[dependencies.multiversx-sc-snippets]
version = "0.50.0"

[dependencies.multiversx-sc]
version = "0.50.0"

[dependencies.clap]
version = "4.4.7"
features = ["derive"]

[dependencies.serde]
version = "1.0"
features = ["derive"]
