[[bin]]
name = "composable-tasks-interact"
path = "src/composable_tasks_interact.rs"

[package]
name = "composable-tasks-interact"
version = "0.0.0"
authors = ["you"]
edition = "2021"
publish = false

[dependencies]
toml = "0.8.6"

[dependencies.composable-tasks]
path = ".."

[dependencies.multiversx-sc-snippets]
version = "0.50.0"

[dependencies.multiversx-sc]
version = "0.50.0"

[dependencies.clap]
version = "4.4.7"
features = ["derive"]

[dependencies.serde]
version = "1.0"
features = ["derive"]
