[package]
name = "energy-dao-wasm"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = false

[dependencies.energy-dao]
path = ".."

[dependencies.multiversx-sc-wasm-adapter]
version = "=0.50.0"

[workspace]
members = ["."]
