[package]
name = "locked-token-pos-creator-wasm"
version = "0.0.0"
edition = "2018"
publish = false
authors = [ "you",]

[lib]
crate-type = [ "cdylib",]

[workspace]
members = [ ".",]

[dev-dependencies]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.locked-token-pos-creator]
path = ".."

[dependencies.multiversx-sc-wasm-adapter]
version = "=0.44.0"
